Added logos and support for menu in services

--- a/android-apps/fullapp/res/values/strings.xml
+++ b/android-apps/fullapp/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <!-- Application -->
     <string name="app_name">Web SOA</string>
+    <string name="hsoa_logo">HSOA Logo</string>
+    <string name="it_soa_logo">IT SOA Logo</string>
     
     <!-- Preferences -->
     <string name="menu_settings">Settings</string>
